--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,10 +11,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-scroll": "^1.8.10",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
+    "react-parallax-tilt": "^1.7.244",
+    "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.13",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
